# asppi-webapp

./: .gitignore
asppi-backend/: main.py  pyproject.toml  testfile
asppi-backend/routers/: cl.py  da1.py  polaris_checkmku.py  polaris_onload.py  rc.py  test_route.py  troyka.py  wt.py
asppi-backend/tests/: cl.txt  test_interpret_data.py
asppi-backend/utils/: database.py  interpret_data.py
asppi-frontend/: package-lock.json  package.json
asppi-frontend/app/: head.tsx  layout.tsx  page.tsx  providers.tsx
asppi-frontend/components/: HeaderComponent.tsx  MainParametersChartComponent.tsx  SoftwareConditionComponent.tsx  StateOfThePowerUnitComponent.tsx
asppi-frontend/hooks/: useCarouselStore.ts
asppi-frontend/services/: getData.ts
asppi-frontend/styles/: HeaderComponent.module.scss  colors.scss  globals.scss  homePage.module.scss  mainParametersChartComponent.module.scss  softwareConditionComponent.module.scss  stateOfThePowerUnitComponent.module.scss
